--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -8,9 +10,14 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   min-height: 100vh;
+}
+
+html,
+body,
+input,
+button {
+  font-family: "Poppins", sans-serif;
 }
 
 a {
@@ -48,21 +55,6 @@ a {
   font-size: 20px;
   font-weight: 500;
   color: black;
-}
-
-button {
-  background-color: green;
-  color: white;
-  padding: 12px 20px;
-  border-radius: 4px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-button:hover {
-  background-color: rgb(2, 107, 2);
 }
 
 /**
