--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -11,13 +11,14 @@
   justify-content: space-between;
 }
 
-.left,
 .right {
   width: 40%;
 }
 
 .left h1 {
   font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 36px;
 }
 
 .right p {
