--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap");
 
+:root {
+  --primary: #134cae;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -20,9 +24,59 @@ button {
   font-family: "Poppins", sans-serif;
 }
 
+button:disabled {
+  pointer-events: none;
+  opacity: 0.6;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+input,
+textarea {
+  border: 1px solid #cfcfcf;
+  background-color: transparent;
+  outline: none;
+  padding: 4px 8px;
+  border-radius: 3px;
+  font-size: 16px;
+  background-color: #f6f6f6;
+  transition: all 0.3s ease;
+  resize: none;
+}
+
+input:hover,
+textarea:hover {
+  border-color: var(--primary) !important;
+}
+
+input:focus,
+textarea:focus {
+  border-color: var(--primary) !important;
+  background-color: transparent;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.input-group label {
+  color: gray;
+  font-size: 14px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.463);
+  backdrop-filter: blur(10px);
 }
 
 /* 
