--- a/styles/MintModal.module.css
+++ b/styles/MintModal.module.css
@@ -76,6 +76,7 @@
   outline: none;
   border-radius: 4px;
   transition: all 0.3s ease;
+  min-width: 80px;
 }
 
 .cta button:nth-child(1) {
@@ -95,7 +96,7 @@
 
 .dropzone {
   background-color: #f6f6f6;
-  border: 2px dashed #c5c5c5;
+  border: 1px solid #c5c5c5;
   color: gray;
   width: 200px;
   height: 200px;
@@ -118,6 +119,13 @@
 .dropzone:active {
   border-color: var(--primary) !important;
   background-color: transparent;
+}
+
+.dropzone img {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 #uploadIcon {
