--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,6 +66,7 @@ textarea:focus {
 }
 
 .input-group label {
+  width: max-content;
   color: gray;
   font-size: 14px;
 }
@@ -78,6 +79,18 @@ textarea:focus {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.463);
   backdrop-filter: blur(10px);
+}
+
+.required {
+  position: relative;
+}
+
+.required::after {
+  content: "*";
+  position: absolute;
+  top: 0;
+  left: 105%;
+  color: red;
 }
 
 /* 
@@ -161,5 +174,52 @@ textarea:focus {
   60%,
   100% {
     box-shadow: 10014px 0 0 -5px var(--dot-color);
+  }
+}
+
+/* 
+ * ==============================================
+ * loader
+ * ============================================== 
+ */
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+}
+.loader {
+  margin: 0 auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 4px solid rgba(255, 255, 255, 0.2);
+  border-right: 4px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 4px solid rgba(255, 255, 255, 0.2);
+  border-left: 4px solid #ffffff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
