--- a/styles/MintModal.module.css
+++ b/styles/MintModal.module.css
@@ -11,6 +11,7 @@
   box-shadow: -2px 0px 15px rgba(0, 0, 0, 0.164);
   translate: 100% 0;
   transition: all 0.3s ease-out;
+  z-index: 10;
 }
 
 .showModal {
@@ -25,9 +26,13 @@
 }
 
 .title p {
-  font-size: 28px;
   font-weight: 500;
   line-height: 1.4;
+}
+
+.title p:nth-child(1) {
+  font-size: 28px !important;
+  color: black !important;
 }
 
 .title p:last-child {
@@ -157,4 +162,20 @@
   cursor: pointer;
   color: white;
   font-size: 14px;
+}
+
+.checks {
+  display: flex;
+  gap: 12px;
+  flex-wrap: wrap;
+}
+
+.checks img {
+  width: 120px;
+  height: 120px;
+  border-radius: 4px;
+}
+
+.checks input:checked + label img {
+  border: 4px solid var(--primary);
 }
