--- a/styles/MintModal.module.css
+++ b/styles/MintModal.module.css
@@ -49,6 +49,15 @@
   font-size: 14px;
 }
 
+#headerLink {
+  color: #2f62a3;
+  cursor: pointer;
+}
+
+#headerLink:hover {
+  text-decoration: underline;
+}
+
 #close {
   display: flex;
   align-items: center;
