--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -26,3 +26,9 @@
   margin: 0 auto;
   margin-top: 4rem;
 }
+
+@media only screen and (max-width: 680px) {
+  .container {
+    padding: 1rem;
+  }
+}
