--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -62,3 +62,9 @@
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 2rem;
 }
+
+@media only screen and (max-width: 680px) {
+  .listingHeader {
+    display: none;
+  }
+}
