--- a/styles/ListingCard.module.css
+++ b/styles/ListingCard.module.css
@@ -19,7 +19,8 @@
 .img img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  aspect-ration: 1 / 1;
+  object-fit: cover;
 }
 
 .container > p {
